# momo-export

./: .gitattributes  Cargo.toml  README.md  config.toml
data/: maimemo.v3.db
src/: config.rs  main.rs  service.rs  translate.rs
src/config/: config.rs  mod.rs
src/model/: mod.rs  model.rs
src/repo/: db.rs  mod.rs  translate.rs
src/utils/: excel.rs
