[package]
name = "momo-export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = {version = "0.12.4", features = ["json"]}
rust-crypto = "0.2.36"
serde = { version = "1.0.0", features = ["derive"] }
