[package]
name = "momo-export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
rusqlite = "0.31.0"
rust-crypto = "0.2.36"
rust_xlsxwriter = "0.64.2"
serde = { version = "1.0.0", features = ["derive"] }
tokio = { version = "1.37.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
    "signal",
] }
toml = "0.8.12"
